Zrtp Gui and event modifications. (Issue #463)
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@4994 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -675,6 +675,10 @@ impl.media.security.WARNING_NO_RS_MATCH=<html>No retained shared secret availabl
 impl.media.security.WARNING_NO_EXPECTED_RS_MATCH=<html>An expected retained shared secret is missing.<br/><b>SAS verification is required</b><br/>If SAS codes do not match then hangup and try again</html>
 impl.media.security.SEVERE_GENERIC_MSG=<html>A severe security problem was detected.<br/><b>Your call is not secure</b><br/>Error code: {0}</html>
 impl.media.security.ZRTP_GENERIC_MSG=<html>A severe ZRTP problem was detected.<br/><b>Your call is not secure</b><br/>Error code: {0}</html>
+impl.media.security.INTERNAL_PROTOCOL_ERROR=<html>Internal protocol error occurred.<br/><b>Your call is not secure</b><br/>Error code: {0}</html>
+impl.media.security.CHECKSUM_MISMATCH=<html>Internal ZRTP packet checksum mismatch.<br/>If you see this message often this may mean a denial-of-service attack!</html>
+impl.media.security.RETRY_RATE_EXCEEDED=<html>Too much retries during security negotiation. This may mean that the other party has internet connection problems.<br/><b>Your call is not secure</b><br/>Error code: {0}</html>
+impl.media.security.DATA_SEND_FAILED=<html>Failed to send encryption data. Internet data connection or peer is down.<br/><b>Your call is not secure</b><br/>Error code: {0}</html>
 impl.media.security.SECURITY_OFF=Call encryption support off
 impl.media.security.SECURITY_ON=Call encryption support on
 #impl.media.security.ENGINE_INIT_FAILURE=Securing engine initialization failure
