correct a french translation error
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5001 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources_fr.properties
+++ b/resources/languages/resources_fr.properties
@@ -243,7 +243,7 @@ service.gui.STATUS_CHANGE_GENERAL_ERROR=Échec lors du changement de statut pour
 service.gui.STATUS_CHANGE_NETWORK_FAILURE=Échec lors du changement de statut pour le compte : Nom d''utilisateur : {0}, Nom du serveur : {1}, survenue à cause d''un problème au niveau réseau.
 service.gui.STATUS_MESSAGE_INFO=Dans le champ suivant, vous pouvez saisir le nouveau message que vous souhaitez utiliser.
 service.gui.SUBJECT=Sujet
-service.gui.SUMMARY=Sommaire
+service.gui.SUMMARY=Résumé
 service.gui.TODAY=Aujourd'hui
 service.gui.TOOLS=&Outils
 service.gui.TYPE_YOUR_REQUEST=Saisissez ici votre demande
