swing based popup notifications with tests for the PopupMessage interface.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5020 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -338,6 +338,9 @@ impl.systray.SET_STATUS=Set Status
 impl.systray.ONLINE_STATUS=Online
 impl.systray.OFFLINE_STATUS=Offline
 impl.systray.FAILED_TO_OPEN_ADD_CONTACT_DIALOG=Failed to open the "Add Contact" dialog.
+impl.systray.POPUP_MESSAGE_HANDLER=Systray balloon message
+impl.swingnotification.POPUP_MESSAGE_HANDLER=SC likes popup
+impl.growlnotification.POPUP_MESSAGE_HANDLER=Growl notifications
 
 # account info
 plugin.accountinfo.TITLE=Account Info
@@ -665,6 +668,7 @@ plugin.notificationconfig.RESTORE=Restore Defaults
 plugin.notificationconfig.PLAY_SOUND=Play a sound :
 plugin.notificationconfig.EXEC_PROG=Execute a program :
 plugin.notificationconfig.DISPLAY_POPUP=Show a message in a pop-up window
+plugin.notificationconfig.POPUP_NOTIF_HANDLER=Popup notifications type
 
 # ZRTP Securing
 impl.media.security.INFO=ZRTP Security information
