Fix some missing color resources.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5040 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -181,6 +181,7 @@ service.gui.LOGIN_WINDOW_TITLE=Login {0}
 service.gui.LOGOFF_NOT_SUCCEEDED=An error occured while logging off with the following account: User name: {0}, Server name: {1}.
 service.gui.ME=me
 service.gui.MODIFY=Modify
+service.gui.MORE=See more
 service.gui.MOVE=Move
 service.gui.MOVE_SUBCONTACT=M&ove contact
 service.gui.MOVE_SUBCONTACT_MSG=Select the contact or the group, where you would like to move the selected contact.
