--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -339,8 +339,8 @@ impl.systray.SET_STATUS=Set Status
 impl.systray.ONLINE_STATUS=Online
 impl.systray.OFFLINE_STATUS=Offline
 impl.systray.FAILED_TO_OPEN_ADD_CONTACT_DIALOG=Failed to open the "Add Contact" dialog.
-impl.systray.POPUP_MESSAGE_HANDLER=Systray balloon message
-impl.swingnotification.POPUP_MESSAGE_HANDLER=SC likes popup
+impl.systray.POPUP_MESSAGE_HANDLER=Systray balloon messages
+impl.swingnotification.POPUP_MESSAGE_HANDLER=SIP Communicator popups
 impl.growlnotification.POPUP_MESSAGE_HANDLER=Growl notifications
 
 # account info
@@ -669,7 +669,7 @@ plugin.notificationconfig.RESTORE=Restore Defaults
 plugin.notificationconfig.PLAY_SOUND=Play a sound :
 plugin.notificationconfig.EXEC_PROG=Execute a program :
 plugin.notificationconfig.DISPLAY_POPUP=Show a message in a pop-up window
-plugin.notificationconfig.POPUP_NOTIF_HANDLER=Popup notifications type
+plugin.notificationconfig.POPUP_NOTIF_HANDLER=Popup notifications type :
 
 # ZRTP Securing
 impl.media.security.INFO=ZRTP Security information
