Continuation of Werner's work on ZRTP event management + some changes on the way we're triggering security events through the CallParticipants.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5091 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -315,6 +315,9 @@ service.gui.EXIT_FULL_SCREEN_TOOL_TIP=Exit Fullscreen
 service.gui.HOLD_BUTTON_TOOL_TIP=Toggle Hold
 service.gui.MUTE_BUTTON_TOOL_TIP=Toggle Mute
 service.gui.TRANSFER_BUTTON_TOOL_TIP=Transfer Call
+service.gui.SECURITY_INFO=Security information
+service.gui.SECURITY_WARNING=Security warning
+service.gui.SECURITY_ERROR=Security error
 
 service.gui.JANUARY=Jan
 service.gui.FEBRUARY=Feb
@@ -672,10 +675,6 @@ plugin.notificationconfig.DISPLAY_POPUP=Show a message in a pop-up window
 plugin.notificationconfig.POPUP_NOTIF_HANDLER=Popup notifications type :
 
 # ZRTP Securing
-impl.media.security.INFO=ZRTP Security information
-impl.media.security.WARNING=ZRTP Security warning
-impl.media.security.SEVERE=ZRTP Security error
-impl.media.security.ZRTP=ZRTP Security protocl error
 impl.media.security.WARNING_NO_RS_MATCH=<html>No retained shared secret available.<br/><b>SAS verification is recommended</b></html>
 impl.media.security.WARNING_NO_EXPECTED_RS_MATCH=<html>An expected retained shared secret is missing.<br/><b>SAS verification is required</b><br/>If SAS codes do not match then hangup and try again</html>
 impl.media.security.SEVERE_GENERIC_MSG=<html>A severe security problem was detected.<br/><b>Your call is not secure</b><br/>Error code: {0}</html>
