Adds a maximum width of 600 px for ErrorDialog.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5105 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -175,7 +175,7 @@ User name: {0}<BR>\
 Server name: {1}<BR>\
 due to a network failure. Please check your network connection.</DIV>
 service.gui.LOGIN_GENERAL_ERROR=An error occured while logging in with account: User name: {0}, Server name: {1}.
-service.gui.LOGIN_INTERNAL_ERROR=An error occured while logging in with account: User name: {0}, Server name: {1}. This is most probably an internal application error. You could report your problem to issues@sip-communicator.dev.java.net.
+service.gui.LOGIN_INTERNAL_ERROR=An error occured while logging in with account: User name: {0}, Server name: {1}. This is most probably an internal application error. Please report the problem to our developers mailing list (dev@sip-communicator.dev.java.net).
 service.gui.LOGIN_INVALID_PROPERTIES_ERROR=Unable to log in with account: User name: {0}, Server name: {1}, due to an account configuration problem. Please check your account configuration.
 service.gui.LOGIN_WINDOW_TITLE=Login {0}
 service.gui.LOGOFF_NOT_SUCCEEDED=An error occured while logging off with the following account: User name: {0}, Server name: {1}.
