I18N improvements to initial 'Sign Up' dialog
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5107 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -549,7 +549,7 @@ plugin.rssaccregwizz.CONFIRM_ACCOUNT_REMOVAL_TITLE=Remove missing contactems to 
 # simple accregwizz
 plugin.simpleaccregwizz.INITIAL_ACCOUNT_REGISTRATION=Configure all your favorite protocols in one click.
 plugin.simpleaccregwizz.SIGNUP=Not registered yet?
-plugin.simpleaccregwizz.SPECIAL_SIGNUP=Not registered yet ? - click here to get a new username
+plugin.simpleaccregwizz.SPECIAL_SIGNUP=Not registered yet? - Click here to get a new username
 
 # sipaccregwizz
 plugin.sipaccregwizz.PROTOCOL_NAME=SIP
