--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -314,6 +314,7 @@ service.gui.ENTER_FULL_SCREEN_TOOL_TIP=Enter Fullscreen
 service.gui.EXIT_FULL_SCREEN_TOOL_TIP=Exit Fullscreen
 service.gui.HOLD_BUTTON_TOOL_TIP=Toggle Hold
 service.gui.MUTE_BUTTON_TOOL_TIP=Toggle Mute
+service.gui.LOCAL_VIDEO_BUTTON_TOOL_TIP=Toggle Video
 service.gui.TRANSFER_BUTTON_TOOL_TIP=Transfer Call
 service.gui.SECURITY_INFO=Security information
 service.gui.SECURITY_WARNING=Security warning
