Fix issue #550. Patch by Sebastian Heib.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5124 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources_de.properties
+++ b/resources/languages/resources_de.properties
@@ -161,6 +161,7 @@ service.gui.MSG_DELIVERY_NOT_SUPPORTED=Das verwendetet Protokoll kann Nachrichte
 service.gui.MSG_DELIVERY_INTERNAL_ERROR=Ein interner Fehler ist aufgetreten. Dies ist wahrscheinlich ein Bug. Bitte melden Sie ihn unter http://www.sip-communicator.org/index.php/Development/BugsAndIssues
 service.gui.MSG_DELIVERY_UNKNOWN_ERROR=Ihre Nachricht konnte nicht zugestellt werden:
 service.gui.MSG_NOT_DELIVERED=Ein Netzwerkproblem ist aufgetreten.
+service.gui.MSG_NOT_POSSIBLE=Nachrichtenversand ist für diesen Kontakt nicht möglich (dies wird vom verwendeten Protokoll nicht unterstützt).
 service.gui.MSG_RECEIVED={0} hat Ihnen eine Nachricht gesendet.
 service.gui.MSG_SEND_CONNECTION_PROBLEM=Sie sollen verbunden sein, um Nachrichten zu senden.
 service.gui.MULTIPLE_LOGINS=Sie sind mehrfach mit dem selben Konto verbunden. Das Konto User name: {0}, Server name: {1} ist derzeit nicht verbunden.
