Fixes issue #554 (Missing String resource keys for Keybindings config form).
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5159 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -648,22 +648,20 @@ plugin.googletalkaccregwizz.REGISTER_NEW_ACCOUNT_TEXT=In case you don't have a G
 plugin.googletalkaccregwizz.NEW_ACCOUNT_TITLE=Google Talk new account registration
 
 # key binding chooser
-plugin.keybindings.PLUGIN_NAME=Keybindings
-plugin.keybindings.NEXT_CHAT_TAB=Next Chat Tab
-plugin.keybindings.PREVIOUS_CHAT_TAB=Previous Chat Tab
-plugin.keybindings.OPEN_SMILIES=Show Smilies
-plugin.keybindings.OPEN_HISTORY=Show History
-plugin.keybindings.CLOSE=Close Chat Window
-plugin.keybindings.NEXT_CONTACT_LIST_TAB=Next Contact List Tab
-plugin.keybindings.PREVIOUS_CONTACT_LIST_TAB=Previous Contact List Tab
-plugin.keybindings.MAIN_RENAME=Rename contact
-plugin.keybindings.CHAT_NEXT_TAB=Next tab
-plugin.keybindings.CHAT_PREVIOUS_TAB=Previous tab
+plugin.keybindings.CHAT_CLOSE=Close Chat Window
 plugin.keybindings.CHAT_COPY=Copy
-plugin.keybindings.CHAT_PASTE=Paste
 plugin.keybindings.CHAT_CUT=Cut
-plugin.keybindings.CHAT_OPEN_SMILIES=Open smilies
+plugin.keybindings.CHAT_NEXT_TAB=Next tab
 plugin.keybindings.CHAT_OPEN_HISTORY=Open history
+plugin.keybindings.CHAT_OPEN_SMILIES=Open smilies
+plugin.keybindings.CHAT_PASTE=Paste
+plugin.keybindings.CHAT_PREVIOUS_TAB=Previous tab
+plugin.keybindings.MAIN_NEXT_TAB=Next tab
+plugin.keybindings.MAIN_PREVIOUS_TAB=Previous tab
+plugin.keybindings.MAIN_RENAME=Rename contact
+plugin.keybindings.OPEN_HISTORY=Show History
+plugin.keybindings.OPEN_SMILIES=Show Smilies
+plugin.keybindings.PLUGIN_NAME=Keybindings
 
 # Notification Configuration Form
 plugin.notificationconfig.TURN_ON_ALL=Turn On All
