--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -297,7 +297,7 @@ service.gui.TYPE_YOUR_REQUEST=Type your request here
 service.gui.USER_IDENTIFIER=User identifier:
 service.gui.USER_EXISTS_ERROR=This user already exists on the selected network. Please choose another user or network.
 service.gui.USERNAME_NULL=Please fill the name of your account.
-service.gui.ACCOUNT_CREATION_FAILED=We failed to create your account due to the following error: {0}.
+service.gui.ACCOUNT_CREATION_FAILED=We failed to create your account due to the following error: {0}
 service.gui.UNKNOWN=Unknown user
 service.gui.MSG_DELIVERY_UNKNOWN_ERROR=Unknown error has occured while delivering your message.
 service.gui.UNREGISTERED_MESSAGE=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
