- Fix a problem with the name of the first Dict contact - New feature: show/hide toolbar and stylebar in the chat window
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5170 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -303,6 +303,8 @@ service.gui.MSG_DELIVERY_UNKNOWN_ERROR=Unknown error has occured while deliverin
 service.gui.UNREGISTERED_MESSAGE=Unable to connect the following account: User name: {0}, Server name: {1}. You are currently offline.
 service.gui.VIEW=&View
 service.gui.VIEW_HISTORY=View &history
+service.gui.VIEW_STYLEBAR=View &style bar
+service.gui.VIEW_TOOLBAR=View &toolbar
 service.gui.WARNING=Warning
 service.gui.YES=Yes
 service.gui.YESTERDAY=Yesterday
