--- a/resources/languages/resources_fr.properties
+++ b/resources/languages/resources_fr.properties
@@ -253,6 +253,8 @@ service.gui.MSG_DELIVERY_UNKNOWN_ERROR=Une erreur inconnue est survenue pendant 
 service.gui.UNREGISTERED_MESSAGE=Impossible de se connecter avec le compte : Nom d''utilisateur : {0}, Nom du serveur : {1}. Vous êtes actuellement "déconnecté".
 service.gui.VIEW=&Voir
 service.gui.VIEW_HISTORY=Voir l'&historique
+service.gui.VIEW_STYLEBAR=Afficher la barre de &style
+service.gui.VIEW_TOOLBAR=Afficher la barre d'ou&tils
 service.gui.WARNING=Attention
 service.gui.YES=Oui
 service.gui.YESTERDAY=Hier
