Fixes issue #538 : Add Account wizard's protocol combo should be empty by default. The "Add Account" wizard will now open without a selected default protocol and instead it would open a page prompting the user to select a network.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5179 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -350,6 +350,12 @@ impl.systray.POPUP_MESSAGE_HANDLER=Systray balloon messages
 impl.swingnotification.POPUP_MESSAGE_HANDLER=SIP Communicator popups
 impl.growlnotification.POPUP_MESSAGE_HANDLER=Growl notifications
 
+# New Account Dialog
+impl.gui.main.account.DEFAULT_PAGE_TITLE=Select Network
+impl.gui.main.account.DEFAULT_PAGE_BODY=You can use the list above to select the network that you would like to add an account for.
+impl.gui.main.account.DUMMY_PROTOCOL_NAME=select network
+impl.gui.main.account.DUMMY_PROTOCOL_DESCRIPTION=select network
+
 # account info
 plugin.accountinfo.TITLE=Account Info
 plugin.accountinfo.BROWSE=Browse
@@ -378,7 +384,7 @@ plugin.contactinfo.USER_PICTURES=User pictures
 plugin.aimaccregwizz.PROTOCOL_NAME=AIM
 plugin.aimaccregwizz.PROTOCOL_DESCRIPTION=The AIM service protocol
 plugin.aimaccregwizz.USERNAME=AIM Screenname:
-plugin.aimaccregwizz.USERNAME_AND_PASSWORD=UIN and Password
+plugin.aimaccregwizz.USERNAME_AND_PASSWORD=Screen Name and Password
 plugin.aimaccregwizz.REGISTER_NEW_ACCOUNT=Register new account
 plugin.aimaccregwizz.REGISTER_NEW_ACCOUNT_TEXT=In case you don't have an AIM account, click on this button to create a new one.
 plugin.aimaccregwizz.OVERRIDE_SERVER_DEFAULT_OPTIONS=Override server default options
