Fixes issue #624 : Protocol account selectors in wizards allow multiple selections. Removes the Radio buttons and reorganizes the AccountSelector page shown when clicking on the "Join chatroom" button
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5181 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -157,6 +157,7 @@ service.gui.INVITE_REASON=Invite reason
 service.gui.IS_CALLING=is calling...
 service.gui.JOIN=&Join
 service.gui.JOIN_AS=J&oin as
+service.gui.CLOSE_CHAT_ROOM_DIALOG=C&lose
 service.gui.JOIN_CHAT_ROOM=&Join chat room...
 service.gui.JOIN_CHAT_ROOM_TITLE=Join chat room
 service.gui.JOIN_CHAT_ROOM_NAME=Please enter the name of the chat room you would like to join.
