Issue #599 Initial commit for windows autoupdate.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5192 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -606,6 +606,11 @@ plugin.updatechecker.DIALOG_MESSAGE=<html>A new version of {0} is available for 
 plugin.updatechecker.DIALOG_MESSAGE_2=<br>{0} ({1}): <br>
 plugin.updatechecker.BUTTON_DOWNLOAD=Download
 plugin.updatechecker.BUTTON_CLOSE=Close
+plugin.updatechecker.BUTTON_INSTALL=Install
+plugin.updatechecker.UPDATE_MENU_ENTRY=Check For Update
+plugin.updatechecker.DIALOG_WARN=If you continue with update application will be shutdown! Are you sure?
+plugin.updatechecker.DIALOG_NOUPDATE=Your version is up to date.
+plugin.updatechecker.DIALOG_NOUPDATE_TITLE=No new version
 
 # whiteboard
 plugin.whiteboard.TITLE=Whiteboard [Beta]
