- Add a new FontChooser dialog - Add an item in the options menu to change the font and the color
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5199 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -136,6 +136,13 @@ service.gui.FFC_STATUS=Free for chat
 service.gui.FILE=&File
 service.gui.FINISH=&Finish
 service.gui.FONT=Font
+service.gui.FONT_BOLD=Bold
+service.gui.FONT_COLOR=Color
+service.gui.FONT_FAMILY=Family
+service.gui.FONT_ITALIC=Italic
+service.gui.FONT_SIZE=Size
+service.gui.FONT_STYLE=Style
+service.gui.FONT_UNDERLINE=Underline
 service.gui.HANG_UP=Hang up
 service.gui.HELP=&Help
 service.gui.HIDE_OFFLINE_CONTACTS=Hide inactive contacts
@@ -258,6 +265,7 @@ service.gui.SEARCH=&Search
 service.gui.SEARCH_FOR_CHAT_ROOMS_MSG=Click the below button to show all chat rooms existing in the selected server. Then select the one you would like to join and click the join button.
 service.gui.SECURITY_AUTHORITY_REALM=The {0} server has requested your authentication.
 service.gui.SELECT_ACCOUNT=Select account
+service.gui.SELECT_COLOR=Select color
 service.gui.SELECT_GROUP=Select group
 service.gui.SELECT_GROUP_WIZARD_MSG=The list below contains all groups in your Contact List. Select the one, where you would like to add the new contact.
 service.gui.SELECT_GROUP_WIZARD=Specify group
