--- a/resources/languages/resources_fr.properties
+++ b/resources/languages/resources_fr.properties
@@ -124,6 +124,13 @@ service.gui.FFC_STATUS=Disponible pour discuter
 service.gui.FILE=&Fichier
 service.gui.FINISH=&Terminer
 service.gui.FONT=Police
+service.gui.FONT_BOLD=Gras
+service.gui.FONT_COLOR=Couleur
+service.gui.FONT_FAMILY=Police
+service.gui.FONT_ITALIC=Italique
+service.gui.FONT_SIZE=Taille
+service.gui.FONT_STYLE=Style
+service.gui.FONT_UNDERLINE=Souligné
 service.gui.CHAT_ROOM_NOT_CONNECTED=Vous devez être connecté avant de pouvoir rejoindre un salon. Prière de vous connectez avant de réessayer.
 service.gui.CHAT_ROOM_LEAVE_NOT_CONNECTED=Vous devez être connecté pour pouvoir quitter un salon.
 service.gui.HELP=&Aide
@@ -220,6 +227,7 @@ service.gui.SEARCH=&Rechercher
 service.gui.SEARCH_FOR_CHAT_ROOMS_MSG=Cliquez sur le bouton ci-dessous pour afficher tous les salons existant du serveur sélectionné. Puis, choisissez celui que vous souhaitez rejoindre et cliquez le bouton "rejoindre".
 service.gui.SECURITY_AUTHORITY_REALM=Le serveur {0} a demandé votre autorisation.
 service.gui.SELECT_ACCOUNT=Choix d'un compte
+service.gui.SELECT_COLOR=Choix de la couleur
 service.gui.SELECT_GROUP=Choisissez un groupe
 service.gui.SELECT_GROUP_WIZARD_MSG=La liste suivante contient tous les groupes de votre liste de contacts. Choisissez-en un, auquel vous souhaitez ajouter un nouveau contact.
 service.gui.SELECT_GROUP_WIZARD=Spécifiez un groupe
