Windows update now supports password protected sites, https and http redirects. Show dialog if installer file is missing. Stopping update process now iss working. Change of interface language.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5203 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -469,6 +469,8 @@ plugin.generalconfig.BRING_WINDOW_TO_FRONT=Bring chat window to front
 plugin.generalconfig.ERROR_PERMISSION=You don't have enough privileges to remove autostart
 plugin.generalconfig.TRANSPARENCY=Transparency
 plugin.generalconfig.ENABLE_TRANSPARENCY=Enable transparency
+plugin.generalconfig.DEFAULT_LANGUAGE=Interface Language
+plugin.generalconfig.DEFAULT_LANGUAGE_RESTART_WARN=Your changes will take effect on next restart.
 
 # gibberish accregwizz
 plugin.gibberishaccregwizz.PROTOCOL_NAME=Gibberish
@@ -619,6 +621,7 @@ plugin.updatechecker.UPDATE_MENU_ENTRY=Check For Update
 plugin.updatechecker.DIALOG_WARN=If you continue with update application will be shutdown! Are you sure?
 plugin.updatechecker.DIALOG_NOUPDATE=Your version is up to date.
 plugin.updatechecker.DIALOG_NOUPDATE_TITLE=No new version
+plugin.updatechecker.DIALOG_MISSING_UPDATE=Update Installer is missing.
 
 # whiteboard
 plugin.whiteboard.TITLE=Whiteboard [Beta]
