A single quote used in messages with parameters causes two problems: the quote is absent in the result message and the param is not replaced. It's not fixed.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5223 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -17,6 +17,9 @@
 #   be used
 # - \ at the end of a line means that the translation is continued
 #   in the next line
+# - cannot use single quotes and parameters.
+#   If you want a single quote to appear in the translated message
+#   put ''(two quotes)
 #
 # To start SIP Communicator with a language that is different
 # from your system's language, pass the language code to ant:
@@ -65,7 +68,7 @@ service.gui.BAN=&Ban
 service.gui.BAN_FAILED=Ban failed
 service.gui.BAN_FAILED_GENERAL_ERROR=Failed to ban {0}. A general server error occured.
 service.gui.BAN_FAILED_NOT_ALLOWED=Failed to ban {0}. The owner and the administrator of the room could not be banned.
-service.gui.BAN_FAILED_NOT_ENOUGH_PERMISSIONS=Failed to ban {0}. You don't have enough privileges to do that.
+service.gui.BAN_FAILED_NOT_ENOUGH_PERMISSIONS=Failed to ban {0}. You don''t have enough privileges to do that.
 service.gui.BRB_MESSAGE=I'm gone right now, but I'll be back.
 service.gui.BROWSE=Browse
 service.gui.BUSY_MESSAGE=Sorry, I'm busy right now.
@@ -98,7 +101,7 @@ service.gui.CONNECTION_FAILED_MSG=Connection failed for the following account: U
 service.gui.CONNECTION_EXPIRED_MSG=You are currently disconnected from the {0} server.
 service.gui.CONNECTION_REQUIRED_TO_service.gui.JOIN=You have to be connected in order to join a chat room. Please connect and then try again.
 service.gui.CONNECTION_REQUIRED_TO_LEAVE=You have to be connected in order to leave a chat room.
-service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY=The choosen  {0} contact doesn't support telephony.
+service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY=The choosen  {0} contact doesn''t support telephony.
 service.gui.CONTACT_PAUSED_TYPING={0} paused typing the message
 service.gui.CONTACT_TYPING={0} is typing a message
 service.gui.CONTACT_TYPING_STATE_STALE=typing state not updated
@@ -173,10 +176,10 @@ service.gui.KICK=&Kick
 service.gui.KICK_FAILED=Kick failed
 service.gui.KICK_FAILED_GENERAL_ERROR=Failed to kick {0}. A general server error occured.
 service.gui.KICK_FAILED_NOT_ALLOWED=Failed to kick {0}. The owner and the administratior of the room could not be kicked.
-service.gui.KICK_FAILED_NOT_ENOUGH_PERMISSIONS=Failed to kick {0}. You don't have enough privileges to do that.
+service.gui.KICK_FAILED_NOT_ENOUGH_PERMISSIONS=Failed to kick {0}. You don''t have enough privileges to do that.
 service.gui.LAST=Last
 service.gui.LEAVE=&Leave
-service.gui.LIMIT_REACHED_FOR_IP=You have too many existing registrations from the local IP address and the {0} server doesn't allow to open any more of them.
+service.gui.LIMIT_REACHED_FOR_IP=You have too many existing registrations from the local IP address and the {0} server doesn''t allow to open any more of them.
 service.gui.LOGIN=&Login
 service.gui.LOGIN_NETWORK_ERROR=Unable to log in with account: User name: {0}, Server name: {1}, due to a network failure. Please check your network connection.
 User name: {0}<BR>\
@@ -257,7 +260,7 @@ service.gui.RENAME_GROUP=Re&name group
 service.gui.RENAME_GROUP_INFO=In the field below you can specify the name you would like to use for the given group.
 service.gui.REQUEST=&Request
 service.gui.REQUEST_AUTHORIZATION=&Request authorization
-service.gui.REQUEST_AUTHORIZATION_MSG=Can't add {0} to your Contact List. {0} must authorize your request to add him/her. Please enter your request below.
+service.gui.REQUEST_AUTHORIZATION_MSG=Can''t add {0} to your Contact List. {1} must authorize your request to add him/her. Please enter your request below.
 service.gui.RETRY=Retry
 service.gui.ROOT_GROUP=Root group
 service.gui.SAVE=&Save
@@ -427,7 +430,7 @@ plugin.dictaccregwizz.ANY_DICTIONARY_FORM=Any Dictionary from {0}
 plugin.dictaccregwizz.FIRST_MATCH=First Match
 plugin.dictaccregwizz.NO_MATCH=No match
 plugin.dictaccregwizz.MATCH_RESULT=No definitions found for "{0}", perhaps you mean:\n
-plugin.dictaccregwizz.INVALID_DATABASE=The current dictionary "{0}" doesn't exist anymore on the server.
+plugin.dictaccregwizz.INVALID_DATABASE=The current dictionary "{0}" doesn''t exist anymore on the server.
 plugin.dictaccregwizz.INVALID_STRATEGY=The current strategy isn't available on the server.
 plugin.dictaccregwizz.PROTOCOL_NAME=Dict
 plugin.dictaccregwizz.PROTOCOL_DESCRIPTION=The Dict service protocol
