Add functions to enable and disable the ZRTP Hello hash attribute in the SIP SDP data. The user may enable/disable the ZRTP attribute on the SIP account advanced tab if security is also enabled.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5292 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -597,6 +597,7 @@ plugin.sipaccregwizz.KEEP_ALIVE_INTERVAL_INFO=Between 1 and 3600 seconds
 plugin.sipaccregwizz.REGISTER=REGISTER
 plugin.sipaccregwizz.OVERRIDE_SERVER_DEFAULT_OPTIONS=Override server default options
 plugin.sipaccregwizz.ENABLE_DEFAULT_ENCRYPTION=Enable support to encrypt calls
+plugin.sipaccregwizz.ENABLE_SIPZRTP_ATTRIBUTE=Indicate support of ZRTP in SIP data 
 
 # ssh accregwizz
 plugin.sshaccregwizz.PROTOCOL_NAME=SSH
