New smileys pack and some improvements of the smileys box look and feel.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5306 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -682,14 +682,14 @@ plugin.keybindings.CHAT_COPY=Copy
 plugin.keybindings.CHAT_CUT=Cut
 plugin.keybindings.CHAT_NEXT_TAB=Next tab
 plugin.keybindings.CHAT_OPEN_HISTORY=Open history
-plugin.keybindings.CHAT_OPEN_SMILIES=Open smilies
+plugin.keybindings.CHAT_OPEN_SMILIES=Open smileys
 plugin.keybindings.CHAT_PASTE=Paste
 plugin.keybindings.CHAT_PREVIOUS_TAB=Previous tab
 plugin.keybindings.MAIN_NEXT_TAB=Next tab
 plugin.keybindings.MAIN_PREVIOUS_TAB=Previous tab
 plugin.keybindings.MAIN_RENAME=Rename contact
 plugin.keybindings.OPEN_HISTORY=Show History
-plugin.keybindings.OPEN_SMILIES=Show Smilies
+plugin.keybindings.OPEN_SMILIES=Show Smileys
 plugin.keybindings.PLUGIN_NAME=Keybindings
 
 # Notification Configuration Form
