Fixing issue #662 Plug-ins vs bundles in Tools > Options > Plug-ins.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5321 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -554,7 +554,7 @@ plugin.pluginmanager.UPDATE=Update
 plugin.pluginmanager.PLUGINS=Plug-ins
 plugin.pluginmanager.URL=Url
 plugin.pluginmanager.CHOOSE_FILE=Select File
-plugin.pluginmanager.SHOW_SYSTEM_BUNDLES=Show system bundles
+plugin.pluginmanager.SHOW_SYSTEM_BUNDLES=Show system plug-ins
 plugin.pluginmanager.SYSTEM=System
 plugin.pluginmanager.NEW=New
 
