--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -97,6 +97,7 @@ service.gui.CHAT_ROOMS=Chat rooms
 service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} has changed the subject to {1}
 service.gui.CLOSE=Cl&ose
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
+service.gui.CONNECTING=Connecting...
 service.gui.CONNECTION_FAILED_MSG=Connection failed for the following account: User name: {0}, Server name: {1}. Please check your network connection or contact your network administrator for more information.
 service.gui.CONNECTION_EXPIRED_MSG=You are currently disconnected from the {0} server.
 service.gui.CONNECTION_REQUIRED_TO_service.gui.JOIN=You have to be connected in order to join a chat room. Please connect and then try again.
@@ -119,6 +120,7 @@ service.gui.CREATE_FIRST_GROUP_WIZARD=Your contact list doesn't contain any grou
 service.gui.CONTACT_INFO_NOT_SUPPORTED=This contact doesn't support web contact info
 service.gui.CUT=C&ut
 service.gui.DATE=Date
+service.gui.DELETE=Delete
 service.gui.DIALPAD=Dialpad
 service.gui.DND_STATUS=Do not disturb
 service.gui.DO_NOT_ASK_AGAIN=Don't ask again
@@ -191,7 +193,6 @@ service.gui.LOGIN_INVALID_PROPERTIES_ERROR=Unable to log in with account: User n
 service.gui.LOGIN_WINDOW_TITLE=Login {0}
 service.gui.LOGOFF_NOT_SUCCEEDED=An error occured while logging off with the following account: User name: {0}, Server name: {1}.
 service.gui.ME=me
-service.gui.MODIFY=Modify
 service.gui.MORE=See more
 service.gui.MOVE=Move
 service.gui.MOVE_SUBCONTACT=M&ove contact
