Fixed a label typo in the english resource file
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5349 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -100,7 +100,7 @@ service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=You have received a new message less th
 service.gui.CONNECTING=Connecting...
 service.gui.CONNECTION_FAILED_MSG=Connection failed for the following account: User name: {0}, Server name: {1}. Please check your network connection or contact your network administrator for more information.
 service.gui.CONNECTION_EXPIRED_MSG=You are currently disconnected from the {0} server.
-service.gui.CONNECTION_REQUIRED_TO_service.gui.JOIN=You have to be connected in order to join a chat room. Please connect and then try again.
+service.gui.CONNECTION_REQUIRED_TO_JOIN=You have to be connected in order to join a chat room. Please connect and then try again.
 service.gui.CONNECTION_REQUIRED_TO_LEAVE=You have to be connected in order to leave a chat room.
 service.gui.CONTACT_NOT_SUPPORTING_TELEPHONY=The choosen  {0} contact doesn''t support telephony.
 service.gui.CONTACT_PAUSED_TYPING={0} paused typing the message
