Adding support for file transfer for XMPP and graphical User Interface for file transfer (ongoing work). This first commit adds the needed gui that enables users to send and receive files, to drag and drop files into chat windows. It displays incoming file notifications, file icons or previews (where possible, e.g. images). This work package also contains a first file transfer implementation over the XMPP protocol (using the smack implementation of xep-0096: http://xmpp.org/extensions/xep-0096.html). Unfortunately this implementation won't work very well with GoogleTalk accounts for now, as Google servers seem to block every file bigger than 60K.
This commit contains also some improvements in the way we load the history and we manage error messages in the gui.

git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5380 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -139,7 +139,28 @@ service.gui.GROUP_NAME=Group name
 service.gui.FAILED_TO_JOIN_CHAT_ROOM=Failed to join chat room with name: {0}.
 service.gui.FFC_STATUS=Free for chat
 service.gui.FILE=&File
+service.gui.FILE_WAITING_TO_ACCEPT=Waiting for {0} to accept your file.
+service.gui.FILE_UNABLE_TO_SEND=An error occured while sending file to {0}.
+service.gui.FILE_RECEIVE_FAILED=An error occurred while transferring file from {0}.
+service.gui.FILE_SENDING_TO=Sending file to {0}.
+service.gui.FILE_RECEIVING_FROM=Receiving file from {0}.
+service.gui.FILE_SEND_COMPLETED=File has been successfully sent to {0}.
+service.gui.FILE_RECEIVE_COMPLETED=File has been received from {0}.
+service.gui.FILE_TRANSFER_CANCELED=File transfer has been canceled.
+service.gui.FILE_SEND_REFUSED={0} has refused this file.
+service.gui.FILE_RECEIVE_REFUSED=You have refused the file from {0}.
+service.gui.FILE_TRANSFER_PREPARING=Preparing file transfer with {0}. Please wait...
+service.gui.FILE_TRANSFER_REQUEST_RECIEVED={0} is sharing a file with you.
+service.gui.FILE_DOES_NOT_EXIST=The specified file could not be found. It was either deleted or moved.
+service.gui.FILE_OPEN_FAILED=Failed to open file. It may be deleted or moved.
+service.gui.FILE_OPEN_NOT_SUPPORTED=We are sorry, the open file operation is not supported by the current platform.
+service.gui.FILE_OPEN_NO_PERMISSION=You don't have enough permissions to open this file. Please check your read permissions and try again.
+service.gui.FILE_OPEN_NO_APPLICATION=We couldn't find the application associated with this type of file.
 service.gui.FINISH=&Finish
+service.gui.FOLDER_DOES_NOT_EXIST=The folder containing this file could not be found. It was either deleted or moved.
+service.gui.FOLDER_OPEN_FAILED=Failed to open folder.
+service.gui.FOLDER_OPEN_NO_PERMISSION=You don't have enough permissions to open this folder. Please check your read permissions and try again.
+service.gui.FOLDER_OPEN_NO_APPLICATION=We couldn't find an application to open this folder.
 service.gui.FONT=Font
 service.gui.FONT_BOLD=Bold
 service.gui.FONT_COLOR=Color
@@ -232,6 +253,9 @@ service.gui.OK=&OK
 service.gui.OFFLINE=Offline
 service.gui.OLDER_CALLS=Older calls
 service.gui.ONLINE=Online
+service.gui.OPEN=Open
+service.gui.OPEN_FILE_FROM_IMAGE=Double click to open file.
+service.gui.OPEN_FOLDER=Open folder
 service.gui.OPEN_IN_BROWSER=Open in &browser
 service.gui.OPEN_TOOLS=Open Tools Menu
 service.gui.OPTIONS=Options
@@ -286,6 +310,7 @@ service.gui.SEND_SMS_DETAILS=Remember that you need to enter the number in inter
 format e.g. starting with +44 for the UK for example, +447777000000
 service.gui.SEND_SMS_NOT_SUPPORTED=The protocol you have selected doesn't support SMS messages.
 service.gui.SEND_VIA=Send via
+service.gui.SENT=sent
 service.gui.SET_STATUS_MESSAGE=Set status message
 service.gui.SETTINGS=&Options
 service.gui.SHOW_OFFLINE_CONTACTS=Show inactive contacts
