--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -101,6 +101,7 @@ service.gui.CHAT_ROOMS=Chat rooms
 service.gui.CHAT_ROOM_SUBJECT_CHANGED={0} has changed the subject to {1}
 service.gui.CLOSE=Cl&ose
 service.gui.CLOSE_CHAT_AFTER_NEW_MESSAGE=You have received a new message less than 2 seconds ago. Are you sure you want to close this chat?
+service.gui.CLOSE_CHAT_ACTIVE_FILE_TRANSFER=You have active file transfers. Are you sure you want to cancel them?
 service.gui.CONNECTING=Connecting...
 service.gui.CONNECTION_FAILED_MSG=Connection failed for the following account: User name: {0}, Server name: {1}. Please check your network connection or contact your network administrator for more information.
 service.gui.CONNECTION_EXPIRED_MSG=You are currently disconnected from the {0} server.
