--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -152,7 +152,7 @@ service.gui.FILE_RECEIVING_FROM=Receiving file from {0}.
 service.gui.FILE_SEND_COMPLETED=File has been successfully sent to {0}.
 service.gui.FILE_RECEIVE_COMPLETED=File has been received from {0}.
 service.gui.FILE_TRANSFER_CANCELED=File transfer has been canceled.
-service.gui.FILE_SEND_REFUSED=File has been {0} has refused this file.
+service.gui.FILE_SEND_REFUSED={0} has refused this file.
 service.gui.FILE_TRANSFER_REFUSED=File transfer has been rejected.
 service.gui.FILE_RECEIVE_REFUSED=You have refused the file from {0}.
 service.gui.FILE_TRANSFER_PREPARING=Preparing file transfer with {0}. Please wait...
