--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -152,8 +152,10 @@ service.gui.FILE_RECEIVING_FROM=Receiving file from {0}.
 service.gui.FILE_SEND_COMPLETED=File has been successfully sent to {0}.
 service.gui.FILE_RECEIVE_COMPLETED=File has been received from {0}.
 service.gui.FILE_TRANSFER_CANCELED=File transfer has been canceled.
+service.gui.FILE_SEND_FAILED=Failed to send file: {0}.
 service.gui.FILE_SEND_REFUSED={0} has refused this file.
 service.gui.FILE_TRANSFER_REFUSED=File transfer has been rejected.
+service.gui.FILE_TRANSFER_NOT_SUPPORTED=The contact you have selected doesn't support file transfers.
 service.gui.FILE_RECEIVE_REFUSED=You have refused the file from {0}.
 service.gui.FILE_TRANSFER_PREPARING=Preparing file transfer with {0}. Please wait...
 service.gui.FILE_TRANSFER_REQUEST_RECIEVED={0} is sharing a file with you.
