Fix progress string on file transfer progress bar.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5510 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -274,6 +274,7 @@ service.gui.PROTOCOL=Protocol
 service.gui.QUIT=&Quit
 service.gui.READY=Ready
 service.gui.REASON=Reason
+service.gui.RECEIVED=received
 service.gui.RECONNECTION_LIMIT_EXCEEDED=You have have been disconnecting and reconnecting to the server too fast. The following account: User name: {0}, Server name: {1} is temporarily banned and would have to wait a bit before trying to login again.
 service.gui.REJECT=&Reject
 service.gui.REMEMBER_PASSWORD=Remember password
