File transfer related changes as follows:  - show transfer speed and estimated transfer time.  - introduced new event that notifies the gui when a file transfer request has been cancelled by the sender.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5527 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -136,6 +136,7 @@ service.gui.EMPTY_HISTORY=&Empty history
 service.gui.ENABLE_TYPING_NOTIFICATIONS=Enable &typing notifications
 service.gui.ENTER_PHONE_NUMBER=Enter phone number
 service.gui.ERROR=Error
+service.gui.ESTIMATED_TIME=Estimated time:
 service.gui.EXIT=E&xit
 service.gui.EXTENDED_CRITERIA=Extended criteria
 service.gui.GENERAL=General
@@ -366,6 +367,7 @@ service.gui.TRANSFER_BUTTON_TOOL_TIP=Transfer Call
 service.gui.SECURITY_INFO=Security information
 service.gui.SECURITY_WARNING=Security warning
 service.gui.SECURITY_ERROR=Security error
+service.gui.SPEED=Speed:
 
 service.gui.JANUARY=Jan
 service.gui.FEBRUARY=Feb
