- Integrates the Facebook protocol developed by Dai Zhiwei as part of Google Summer of Code 2008 in trunk. - Updates HttpCore which is already used by the MSN protocol implementation. Also updates Apache Commons Logging which is already used by profiler4j. - Doesn't jar log4j into the SIP and RSS protocol implementations because it's already a bundle. Thus reduces the sizes of the SIP and RSS protocol implementations.
git-svn-id: https://svn.java.net/svn/jitsi~svn/trunk@5571 198c5059-ef06-4ec0-9a75-fdd6b0ef00a6

--- a/resources/languages/resources.properties
+++ b/resources/languages/resources.properties
@@ -495,6 +495,13 @@ plugin.callhistoryform.CALLTYPE=Call Type
 plugin.callhistoryform.INCOMING=Incoming
 plugin.callhistoryform.OUTGOING=Outgoing
 
+# facebookaccregwizz
+plugin.facebookaccregwizz.PROTOCOL_NAME=Facebook
+plugin.facebookaccregwizz.PROTOCOL_DESCRIPTION=The Facebook Chat protocol
+plugin.facebookaccregwizz.USERNAME=Email:
+plugin.facebookaccregwizz.USERNAME_AND_PASSWORD=Email and Password
+plugin.facebookaccregwizz.INVALID_EMAIL_ADDRESS=Invalid email address
+
 # generalconfig
 plugin.generalconfig.AUTO_START=Auto - start {0} when computer restarts or reboots.
 plugin.generalconfig.GROUP_CHAT_MESSAGES=Group chat messages in one window.
